# cmake-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  Goals.txt  Makefile  main.cc
app/: CMakeLists.txt  main.cc
cmake/: Docs.cmake
configured/: config.hpp.in
docs/: Doxyfile
src/: CMakeLists.txt
src/cuslib/: CMakeLists.txt  cuslib.cc
